--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ body{
 }
 
 .header h1{
-    margin-top: 2vh;
+    margin-top: 1vw;
     margin-left: 4vw;
-    font-size: 2.5vw;
+    font-size: 2.2vw;
     color: var(--color-2)
 }
 
 .menu{
     display: flex;
     flex-direction: row;
-    margin-top: 3vh;
+    margin-top: 1.5vw;
     gap:3vw
 }
 
@@ -37,8 +37,8 @@ body{
 }
 
 .left{
-    margin-left: 12vw;
-    margin-top: 13vh;
+    margin-left: 11vw;
+    margin-top: 6.5vw;
 }
 
 .left h1{
@@ -55,17 +55,17 @@ body{
 
 .left1{
     margin-left: 12vw;
-    margin-top: 3vh;
+    margin-top: 1.5vw;
 }
 
 
 .right1 h1{
-    font-size: 3.4vw;
+    font-size: 3.3vw;
     color: var(--color-1)
 }
 
 .right1 p{
-    font-size: 1.7vw;
+    font-size: 1.65vw;
     margin-top: 1vw;
     color: var(--color-1)
 }
@@ -76,35 +76,170 @@ body{
 }
 
 .boton{
-    margin-top: 3vh;
+    margin-top: 1.5vw;
     text-decoration: none;
     color: var(--color-1);
     background-color: var(--color-2);
     width:15vw;
     font-size: 1.9vw;
-    padding-top:1vh;
-    padding-bottom: 1vh;
+    padding-top:0.5vw;
+    padding-bottom: 0.5vw;
     text-align: center;
+}
+
+.boton1{
+    margin-top: 1.5vw;
+    text-decoration: none;
+    color: var(--color-1);
+    background-color: var(--color-2);
+    width:15vw;
+    font-size: 1.9vw;
+    padding-top:0.5vw;
+    padding-bottom: 0.5vw;
+    text-align: center;
+}
+
+.boton2{
+    margin-top: 1.5vw;
+    transform: translate(38.5vw);
+    text-decoration: none;
+    color: var(--color-1);
+    background-color: var(--color-2);
+    width:15vw;
+    font-size: 1.9vw;
+    padding-top:0.5vw;
+    padding-bottom: 0.5vw;
+    text-align: center;
+}
+
+.boton1 a{
+    font-size: 1.5vw;
 }
 
 .cont{
     display: flex;
     flex-direction: row;
-    padding-bottom: 20vh;
+    padding-bottom: 10vw;
+    border-bottom: 1px solid var(--color-2);
+    height:40vw;
+}
+
+.cont2{
+    display: flex;
+    flex-direction: row;
+    padding-top: 7vw;
+    padding-bottom: 5vw;
+    border-bottom: 1px solid var(--color-2);
+}
+
+.cont3{
+    display: flex;
+    flex-direction: column;
+    padding-top: 5vw;
+    padding-bottom: 6vw;
+    border-bottom: 1px solid var(--color-2);
+}
+
+.cont4{
+    display: flex;
+    flex-direction: column;
+    padding-top: 4vw;
+    padding-bottom: 5vw;
+    border-bottom: 1px solid var(--color-2);
+}
+
+.cont5{
+    padding-top: 5vw;
+    padding-bottom: 3vw;
+    border-bottom: 1px solid var(--color-2);
 }
 
 .right img{
     height:31vw;
-    margin-top: 6vh;
+    width:30vw;
+    margin-top: 3vw;
     margin-left: 3vw;
 }
 
 .left1 img{
     height:38vw;
-    margin-top: -5vh;
+    margin-top: -2.5vw;
+    margin-left: -1vw;
 }
 
 .right1 small{
     color: var(--color-2);
     font-size: 1.6vw;
 }
+
+.bottom{
+    display: flex;
+    flex-direction: row;
+    gap:4.5vw;
+    margin-left: 11vw;
+}
+
+.cont4 .bottom{
+    margin-left: 6vw;
+}
+
+.cont4 p{
+    margin-top: 1vw;
+}
+.box{
+    background-color: var(--color-4);
+    padding-top:1vw;
+    text-align: center;
+    padding-bottom: 1vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+.box img{
+    height:18.5vw
+}
+
+.box h2{
+    font-size: 1.8vw;
+}
+
+.box p{
+    font-size: 1.5vw;
+}
+
+.box small{
+    font-size: 1.5vw;
+    color: var(--color-2)
+}
+
+.top{
+    text-align: center;
+    margin-bottom: 4vw;
+}
+
+.top small{
+    color: var(--color-2);
+    font-size: 1.5vw;
+}
+
+.top h1{
+    color: var(--color-1);
+    font-size: 3.8vw;
+}
+
+.cuadro{
+    display: flex;
+    background-color: var(--color-4);
+    padding-top: 4vw;
+    padding-bottom: 4vw;
+    margin-left: 4vw;
+    margin-right: 4vw;
+    margin-bottom: 2vw;
+    flex-direction: column;
+    text-align: center;
+}
+
+.cuadro h1{
+    font-size: 4vw;
+}
+
